# redsocialMicroservices

./: .env  .gitignore  docker-compose.yaml
.github/workflows/: ci.yaml
AuthService/: docker-compose.yaml  dockerfile  go.mod  go.sum  main.go
AuthService/cmd/: main.go
AuthService/internals/service/: loginService.go  loginService_test.go
CommentServices/: Comment.py  comment_model.py  comment_service.py  database.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml
CommentServices/test/: test_comment.py
FrontendRedSocial/red-social/: README.md  package-lock.json  package.json
FrontendRedSocial/red-social/app/: layout.tsx  page.tsx
FrontendRedSocial/red-social/components/: card-comment.tsx  card-post.tsx  compose-post.tsx  modal-comment.tsx  navbar.tsx  post-buttom.tsx  search-input.tsx  user-image.tsx
PostServices/post-service/: docker-compose.yaml  dockerfile  package-lock.json  package.json
apiGateway/: config.json  develop.env  dockerfile  go.mod  go.sum  main.go
apiGateway/cmd/: main.go
apiGateway/config/: config.go
deploys/: apigateway.yaml  commentservice.yaml  deploy.yaml  postgres-deploy.yaml  postservice.yaml  userservice.yaml
followersService/follower-service/: docker-compose.yaml  dockerfile  package-lock.json  package.json
notificationService/: docker-compose.yaml  dockerfile  go.mod  go.sum  index.html  main.go
notificationService/client/: main.go
notificationService/cmd/: main.go
prometheus/: prometheus.yml
userService/userService/: .gitignore  Dockerfile  HELP.md  build.gradle  compose.yaml
(+121 files in other folders)
